{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 8,
  "lineage": "e01a6ed5-3a57-b045-d870-bde99cfee9cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "teste_lambda_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:552456875479:instance/i-0cb83256ef2bd8a95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb83256ef2bd8a95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c4277eb5dda7962",
            "private_dns": "ip-172-31-13-58.ec2.internal",
            "private_ip": "172.31.13.58",
            "public_dns": "ec2-44-200-125-53.compute-1.amazonaws.com",
            "public_ip": "44.200.125.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b58b8cb86c9663d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "teste_lambda_instances"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd695156eda628da",
            "tags": {
              "Desliga": "True",
              "Name": "Teste Lambda 01"
            },
            "tags_all": {
              "Desliga": "True",
              "Name": "Teste Lambda 01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083a1c8bde3090002"
            ]
          },
          "dependencies": [
            "aws_security_group.teste_lambda_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "teste_lambda_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:552456875479:instance/i-0f5dfc4d1b7a7c8c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5dfc4d1b7a7c8c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf78ec432f67a6a6",
            "private_dns": "ip-172-31-12-207.ec2.internal",
            "private_ip": "172.31.12.207",
            "public_dns": "ec2-3-236-155-13.compute-1.amazonaws.com",
            "public_ip": "3.236.155.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021cc043ea3b82213",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "teste_lambda_instances"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd695156eda628da",
            "tags": {
              "Desliga": "True",
              "Name": "Teste Lambda 02"
            },
            "tags_all": {
              "Desliga": "True",
              "Name": "Teste Lambda 02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083a1c8bde3090002"
            ]
          },
          "dependencies": [
            "aws_security_group.teste_lambda_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "teste_lambda_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:552456875479:instance/i-09ca96748c556d2ca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ca96748c556d2ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0485d9cfa198f0b3a",
            "private_dns": "ip-172-31-0-200.ec2.internal",
            "private_ip": "172.31.0.200",
            "public_dns": "ec2-3-215-181-84.compute-1.amazonaws.com",
            "public_ip": "3.215.181.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b146462d6c4353e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "teste_lambda_instances"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd695156eda628da",
            "tags": {
              "Name": "Teste Lambda 03"
            },
            "tags_all": {
              "Name": "Teste Lambda 03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083a1c8bde3090002"
            ]
          },
          "dependencies": [
            "aws_security_group.teste_lambda_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "teste_lambda_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:552456875479:instance/i-00b13ddb7646e4806",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b13ddb7646e4806",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020dedd4a5ee820a4",
            "private_dns": "ip-172-31-6-0.ec2.internal",
            "private_ip": "172.31.6.0",
            "public_dns": "ec2-44-197-173-35.compute-1.amazonaws.com",
            "public_ip": "44.197.173.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc412d7613208a48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "teste_lambda_instances"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd695156eda628da",
            "tags": {
              "Name": "Teste Lambda 04"
            },
            "tags_all": {
              "Name": "Teste Lambda 04"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083a1c8bde3090002"
            ]
          },
          "dependencies": [
            "aws_security_group.teste_lambda_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "teste_lambda_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552456875479:security-group/sg-083a1c8bde3090002",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-083a1c8bde3090002",
            "ingress": [],
            "name": "teste_lambda_instances",
            "name_prefix": "",
            "owner_id": "552456875479",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03bd4e7a155a5ee61"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1969254806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-083a1c8bde3090002",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.teste_lambda_instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_sg_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-455392343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-083a1c8bde3090002",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.teste_lambda_instances"
          ]
        }
      ]
    }
  ]
}